<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/teamActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    android:orientation="vertical"
    tools:context=".view.TeamActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="4">

            <FrameLayout
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                tools:ignore="UselessParent">

                <ImageView
                    android:id="@+id/imageViewTeam"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_gravity="center"
                    android:contentDescription="@string/teamimage" />
            </FrameLayout>

        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:orientation="vertical">

            <TextView
                android:id="@+id/teamName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/shortName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/tla"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/website"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/founded"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/clubColors"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/venue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white" />

            <ImageView
                android:id="@+id/crestUrl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/teamimage" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_margin="1dp"
        android:background="@color/colorAccent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/player_number"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="5"
            android:gravity="center"
            android:text="@string/nr"
            android:textColor="@color/colorPrimary" />

        <TextView
            android:id="@+id/player_position"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="4"
            android:gravity="center"
            android:text="@string/position"
            android:textColor="@color/colorPrimary" />

        <TextView
            android:id="@+id/player_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="3"
            android:gravity="center"
            android:text="@string/name"
            android:textColor="@color/colorPrimary" />

        <TextView
            android:id="@+id/player_nationality"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="4"
            android:gravity="center"
            android:text="@string/nationality"
            android:textColor="@color/colorPrimary" />


    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/squad"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:listitem="@layout/player_item" />


</LinearLayout>