<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    android:orientation="vertical"
    tools:context=".view.PredictionActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10sp"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:contentDescription="@string/premier_league"
            android:src="@drawable/premier_league_logo" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10sp"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/image_prediction_home"
            android:layout_width="100sp"
            android:layout_height="100sp" />

        <EditText
            android:id="@+id/prediction_home"
            android:layout_width="50sp"
            android:layout_height="50sp"
            android:layout_gravity="center"
            android:layout_margin="10sp"
            android:autofillHints="0"
            android:gravity="center"
            android:inputType="number"
            tools:ignore="LabelFor" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10sp"
            android:text="@string/dash"
            android:textSize="50sp" />

        <EditText
            android:id="@+id/prediction_away"
            android:layout_width="50sp"
            android:layout_height="50sp"
            android:layout_gravity="center"
            android:layout_margin="10sp"
            android:autofillHints="0"
            android:gravity="center"
            android:inputType="number"
            tools:ignore="LabelFor" />

        <ImageView
            android:id="@+id/image_prediction_away"
            android:layout_width="100sp"
            android:layout_height="100sp" />

    </LinearLayout>

    <Button
        android:id="@+id/predict"
        android:layout_width="150sp"
        android:layout_height="50sp"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/set_prediction" />

    <LinearLayout
        android:id="@+id/prediction_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10sp"
            android:gravity="center"
            android:text="Last Prediction"
            android:textSize="30sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/home_name_prediction"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10sp"
                android:layout_weight="1"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/home_goals"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="2"
                android:textSize="26sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/away_name_prediction"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10sp"
                android:layout_weight="1"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/away_goals"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="2"
                android:textSize="26sp" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>